Revert "Make PDF and video previews full-width"
This reverts commit 35fefcb5d2382924ca75f5a74701b64ffccc9dc1.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -664,7 +664,7 @@ img {
   margin: var(--space-3) 0;
 }
 
-.post-videos, .post-gallery, .file-preview-fullwidth {
+.post-videos, .post-gallery {
   margin-top: var(--space-10);
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
