--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -667,7 +667,8 @@ img {
 .post-videos, .post-gallery {
   margin-top: var(--space-10);
   padding: var(--space-8) 0;
-  width: 100%;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -678,6 +679,8 @@ img {
 .post-gallery h3 {
   padding: 0 var(--space-6);
   margin-bottom: var(--space-4);
+  margin-left: calc(50vw - 50%);
+  width: calc(100% - (50vw - 50%) * 2);
 }
 
 /* ======================== Wix Content Override ======================== */
@@ -821,6 +824,7 @@ img {
   overflow: hidden;
   background: #f5f5f5;
   width: 100%;
+  max-width: 100vw;
 }
 
 .carousel-track {
